--- a/pages/index.css
+++ b/pages/index.css
@@ -11,4 +11,7 @@
 /*Блоки*/
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/element/element.css);
+@import url();
 @import url();
