--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,3 +5,11 @@
   max-width: 882px;
   margin: 52px auto 0;
 }
+
+@media screen and (max-width: 640px) {
+  .elements {
+    grid-gap: 20px;
+    max-width: 282px;
+    padding: 0 19px;
+  }
+}
