--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -2,8 +2,10 @@
   background-image: url(../../../images/avatar-custo.jpg);
   background-size: contain;
   background-position: center;
+  background-repeat: no-repeat;
   border-radius: 100px;
   max-width: 120px;
+  max-height: 120px;
   min-height: 120px;
   width: 100%;
 }
