--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,9 +1,20 @@
 .profile__edit-button {
-  background-image: url(../../../images/edit-button.svg);
-  background-size: cover;
+  background-image: url(../../../images/pencil-icon.svg);
+  background-position: center;
+  background-repeat: no-repeat;
   max-width: 24px;
   min-height: 24px;
   width: 100%;
   align-self: center;
+  margin-top: auto;
   margin-left: 17px;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 640px) {
+  .profile__edit-button {
+    margin-left: 1px;
+    margin-top: auto;
+  }
 }
