--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -7,3 +7,11 @@
   max-width: 336px;
   width: 100%;
 }
+
+@media screen and (max-width: 640px) {
+  .profile__info {
+    max-width: 280px;
+    margin: 0;
+    justify-content: center;
+  }
+}
