--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -14,3 +14,12 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 640px) {
+  .profile {
+    max-width: 282px;
+    flex-direction: column;
+    align-items: center;
+    min-height: 286px;
+  }
+}
