--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,19 +2,25 @@
   background-image: url(../../../images/pencil-icon.svg);
   background-position: center;
   background-repeat: no-repeat;
-  max-width: 24px;
-  min-height: 24px;
-  width: 100%;
+  background-color: #000000;
+  width: 24px;
+  height: 24px;
+  display: flex;
   align-self: center;
-  margin-top: auto;
   margin-left: 17px;
   border: 1px solid #ffffff;
   box-sizing: border-box;
+  cursor: pointer;
+  box-shadow: none;
+}
+
+.profile__edit-button:hover {
+  background-image: url(../../../images/pencil-icon-hover.svg);
+  border: 1px solid rgba(255, 255, 255, 0.6);
 }
 
 @media screen and (max-width: 640px) {
   .profile__edit-button {
     margin-left: 1px;
-    margin-top: auto;
   }
 }
