--- a/blocks/profile/__status/profile__status.css
+++ b/blocks/profile/__status/profile__status.css
@@ -3,13 +3,19 @@
   line-height: 22px;
   color: #ffffff;
   margin: 16px 0 0;
+  max-width: 318px;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 640px) {
   .profile__status {
+    max-width: 280px;
     font-size: 14px;
     line-height: 17px;
-    text-align: center;
     margin-top: 14px;
+    text-align: center;
   }
 }
