--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,10 +3,11 @@
   background-position: center;
   background-repeat: no-repeat;
   background-color: #000000;
-  width: 24px;
-  height: 24px;
-  display: flex;
-  align-self: center;
+  max-width: 24px;
+  min-height: 24px;
+  width: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
   margin-left: 17px;
   border: 1px solid #ffffff;
   box-sizing: border-box;
@@ -22,5 +23,6 @@
 @media screen and (max-width: 640px) {
   .profile__edit-button {
     margin-left: 1px;
+    margin-bottom: 17px;
   }
 }
