--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -16,8 +16,7 @@
 }
 
 .profile__add-button:hover {
-  border: 2px solid rgba(255, 255, 255, 0.6);
-  background-image: url(../../../images/add-icon-hover.svg);
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 640px) {
