--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -6,4 +6,10 @@
   width: 100%;
   margin-left: auto;
   align-self: center;
+  border: none;
+  cursor: pointer;
+}
+
+.element__like:hover {
+  transform: scale(1.1);
 }
