--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -4,5 +4,18 @@
   line-height: 22px;
   color: #545454;
   max-width: 318px;
-  margin: 0;
+}
+
+@media screen and (max-width: 860px) {
+  .footer__item {
+    margin-left: 19px;
+  }
+}
+
+
+@media screen and (max-width: 640px) {
+  .footer__item {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
