--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,8 +5,14 @@
   display: flex;
   flex-direction: column;
   max-width: 882px;
-  min-height: 74px;
   width: 100%;
   margin: 0 auto;
   padding-top: 45px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+}
+
+@media screen and (max-width: 640px) {
+  .header {
+    padding-top: 28px;
+  }
 }
