--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -1,9 +1,7 @@
-.popup__status {
+.popup__field {
   max-width: 358px;
-  min-height: 27.34px;
   width: 100%;
   box-sizing: border-box;
-  margin-top: 29.74px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   outline: none;
