--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,10 @@
 @import url(./__title/popup__title.css);
-@import url(./__status/popup__status.css);
 @import url(./__save/popup__save.css);
-@import url(./__name/popup__name.css);
 @import url(./__close/popup__close.css);
 @import url(./__container/popup__container.css);
-@import url(./_opened/popup_opened.css);
+@import url(./__field/popup__field.css);
+@import url(./__field/_type/popup__field_type_name.css);
+@import url(./__field/_type/popup__field_type_status.css);
 
 .popup {
   position: fixed;
@@ -16,10 +16,4 @@
   display: none;
   align-items: center;
   justify-content: center;
-}
-
-@media screen and (max-width: 430px) {
-  .popup {
-    
-  }
 }
