--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -16,13 +16,14 @@
 }
 
 .profile__edit-button:hover {
-  background-image: url(../../../images/pencil-icon-hover.svg);
-  border: 1px solid rgba(255, 255, 255, 0.6);
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 640px) {
   .profile__edit-button {
     margin-left: 1px;
-    margin-bottom: 17px;
+    margin-bottom: 5px;
+    max-width: 18px;
+    min-height: 18px;
   }
 }
