fix: правки разметки, стилей и js кода

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,6 +1,7 @@
 .element__like {
   background-image: url(../../../images/like.svg);
   background-repeat: no-repeat;
+  background-color: #fff;
   max-width: 20.76px;
   min-height: 18.13px;
   width: 100%;
