feature: удаление карточек, лайки(требуется доработка)

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,7 +1,7 @@
 .element__like {
   background-image: url(../../../images/like.svg);
   background-repeat: no-repeat;
-  background-color: #fff;
+  background-color: transparent;
   max-width: 20.76px;
   min-height: 18.13px;
   width: 100%;
@@ -13,4 +13,5 @@
 
 .element__like:hover {
   transform: scale(1.1);
+  opacity: 0.6;
 }
