--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,6 +2,8 @@
 @import url(./__title/element__title.css);
 @import url(./__text/element__text.css);
 @import url(./__like/element__like.css);
+@import url(./__delete/element__delete.css);
+@import url(./_liked/element_liked.css);
 
 .element {
   background-color: #ffffff;
