--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,6 +3,9 @@
 @import url(./__close/popup__close.css);
 @import url(./__container/popup__container.css);
 @import url(./__field/popup__field.css);
+@import url(./__capture/popup__capture.css);
+@import url(./__container/_type_image/popup__container_type_image.css);
+@import url(./__title/_type/popup__title_type_image.css);
 
 .popup {
   position: fixed;
@@ -11,7 +14,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s linear;
 }
