refactor: поменять определение переменных, очистка формы, доработка стилей

--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,5 +1,6 @@
 .element__image {
-  background-size: auto;
+  background-position: center center;
+  object-fit: cover;
   max-width: 282px;
   max-height: 282px;
   min-height: 282px;
