--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,6 +6,10 @@
 @import url(./__capture/popup__capture.css);
 @import url(./__container/_type_image/popup__container_type_image.css);
 @import url(./__title/_type/popup__title_type_image.css);
+@import url(./__field/_type/popup__field_type_error.css);
+@import url(./__field-error/popup__field-error.css);
+@import url(./__field-error/_active/popup__field-error_active.css);
+@import url(./__save/_inactive/popup__save_inactive.css);
 
 .popup {
   position: fixed;
