fix: исправление структуры js кода, рефакторинг, выделение действий в отдельные ф-ии

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -7,8 +7,9 @@
   width: 100%;
   margin-left: auto;
   align-self: center;
-  border: none;
   cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 .element__like:hover {
