--- a/src/blocks/element/element.css
+++ b/src/blocks/element/element.css
@@ -6,6 +6,7 @@
 @import url(./_liked/element_liked.css);
 @import url(./__like-count/element__like-count.css);
 @import url(./__likes/element__likes.css);
+@import url(./__delete/_true/element__delete_true.css);
 
 .element {
   background-color: #ffffff;
