--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -4,6 +4,7 @@
 @import url(./__status/profile__status.css);
 @import url(./__edit-button/profile__edit-button.css);
 @import url(./__add-button/profile__add-button.css);
+@import url(./__avatar-img/profile__avatar-img.css);
 
 .profile {
   position: relative;
